appId: host.exp.Exponent
---
# 🚪 Helper: Logout

- tapOn: "Perfil"
- waitForAnimationToEnd
- scroll
- tapOn: "Cerrar sesión"
- waitForAnimationToEnd
